src/css/styles.css
/* ... */
.problem-statement {
  padding: 2em;
}

.problem-statement p {
  font-size: 24px !important;
  line-height: 35px;
}

.p-statement em {
  font-style: normal;
  color: var(--dark);
  background: var(--sky);
  padding: 4px 0;
}

.figma-prototype {
  height: 80vh;
}

.about-details {
  display: flex;
  flex-direction: column;
  width: 100%;
}


.Feedback,
.SocialProof,
.Footer {
  display: none !important;
}


@layer components {
  .project {
    @apply flex-col md:flex-row w-full px-4 my-12 flex md:mx-0;
  }


  .carousel-card {
    background-color: var(--dark);
    border-radius: 10px;
    display: flex;
    flex-flow: column wrap;
    width:270px;
    height:310px;
    min-width: 204px;
    padding: 20px;
    margin: 20px 10px;
    --tw-shadow: 0 0 #0000;
    box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
    transition-property: all;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 200ms;
  }

  .carousel-card:hover {
    @apply shadow-3xl transition-all ease-in-out duration-200;
  }

  .nav {
    font-family: Capriola;
    font-weight: 200px !important;
    width: 100%;
    justify-content: space-around;
    @apply sm:mt-2 sm:w-auto;
    border: 2px 0 solid var(--heather-light);
  }

  .nav-item {
    @apply rounded-full border-0 transition-all duration-200;
    @apply hover:text-purple-50 transition-all duration-200;
  }

  button {
    /*  @apply bg-purple-300 rounded-full border-4 border-purple-400 transition-all duration-200;
    @apply mt-6 py-1 px-4;
    @apply text-base font-semibold; */
    width: auto;
    width: 200px;
    padding: 13px 19px;
  }

   button:hover {
    @apply shadow-3xl transition-all ease-in-out duration-200;
    border: 3px solid var(--darker);
    background-color: var(--heather-darker);
    color: var(--darker);
  }

  button a {
    @apply flex justify-center;
  }

.card-buttons-container{
  visibility:hidden;
  opacity: 0;
  transition: visibility 0s, opacity 0.5s linear;
  display: flex;
  flex-direction:row;
}

.featured-project-card{
  margin-top: 3rem;
}

.featured-project-card:hover .card-buttons-container{
  visibility:visible;
  opacity: 1;
  display: flex;
  flex-direction:row;
  }

  .card-button-container {
  margin-top: 1rem;
  height: auto;
  vertical-align: middle;
    transition-property: all;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
}

#athena-left-button{
  margin-right: 1rem;
}

 .featured-project-card .card-button-container {
  width:auto;
}

.card-button-container .view-on-hover{
  display: none;
  visibility:hidden;
  opacity: 0;
  transition: visibility 0s, opacity 0.5s linear;
}

.card-button-container:hover .view-on-hover{
  visibility: visibile;
  opacity:1;
  display: flex;
}

  .primary-button{
    display: flex;
    justify-content: center;
    background-color: var(--heather-light);
    border-radius: 60px;
    border: 3px solid var(--heather-dark);
    color: var(--darker);
    transition-property: all;
    transition-timing-function: cubic-b
    ezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
    padding: 10px 16px;
  }
  
  .primary-button i[class^="ph"]{
    color: var(--darker);
    align-items: center;
    transition-property: all;
    transition-timing-function: cubic-b
    ezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
  }



  .ghost-button {
    display: flex;
    justify-content: center;
    border-radius: 60px;
    border: 3px solid var(--heather-dark);
    color: var(--heather-light);
    transition-property: all;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
    padding: 10px 16px;
  }

  .ghost-button a {
    display: flex;
    flex-direction: row;
  }

  .ghost-button h5 {
    color: var(--heather-light);
  }

  .ghost-button i[class^="ph"] {
    color: var(--heather-light);
    align-items: center;
  }

   .ghost-button:hover{
    @apply shadow-3xl transition-all ease-in-out duration-200;
    border: 3px solid var(--heather-light);
    background-color: var(--heather-darker);
    color: var(--darker);
    transition-property: all;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
  }

   .primary-button:hover{
    @apply shadow-3xl transition-all ease-in-out duration-200;
    border: 3px solid var(--heather-light);
    background-color: var(--light);
    color: var(--darker);
    transition-property: all;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
  }

  .go-to-site-button-container{
    width:auto;
  }




 

  .peach.icon-button:hover {
    background-color: var(--peach);
    border: 3px solid var(--dark);
    @apply shadow-peach transition-all ease-in-out duration-200;
  }

  .sky.icon-button:hover {
    background-color: var(--sky);
    border: 3px solid var(--dark);
    @apply shadow-sky transition-all ease-in-out duration-200;
  }

  .lemon.icon-button:hover {
    background-color: var(--lemon);
    border: 3px solid var(--dark);
    @apply shadow-lemon transition-all ease-in-out duration-200;
  }

  .icon-button {
    background-color: var(--heather-light);
    border: 3px solid var(--heather-dark);
    width: 50px;
    height: 50px;
    justify-content: center;
    align-content: center;
    padding: 1rem;
    border-radius: 25px;
    display: flex;
    margin-left: 1rem;
    transition-property: all;
    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
    transition-duration: 150ms;
  }

  .icon-button i[class^="ph"] {
    color: var(--dark);
    font-size: 30px;
    transform: translate(0, -30%);
  }

  .caret i[class^="ph"] {
    font-size: 20px;
    transform: translate(0, -20%);
  }

  .caret {
    float: right;
  }

  .project-card:hover {
    @apply shadow-3xl transition-all ease-in-out duration-200;
  }


}


/* purgecss end ignore */

